# notebooklm-converter

./: .gitignore  0.18  0.2.5  0.3.16  3.4.0  4.0  4.11.0  4.9.0  9.0.0  BRIEFCASE_GUIDE.md  MACOS_BUILD_GUIDE.md  NotebookLM_Converter_Demo.ipynb  README.md  build_macos.sh  build_macos_guide.ps1  check_macos_build.py  demo.py  main.py  pyproject.toml  run_gui.bat  test_gui.py
.github/workflows/: build.yml  debug.yml  gui-test.yml  macos-simple.yml  macos-test.yml  simple-build.yml
.history/: LICENSE_20250722084041  MACOS_COMPLETE_GUIDE_20250722085355.md  PROJECT_STRUCTURE_20250722084234.md  README_20250721172204.md  README_20250721174234.md  README_BRIEFCASE_20250722084032.md  UPDATE_SUMMARY_20250721180128.md  demo_20250721172331.py  install_dependencies_20250721172317.bat  install_dependencies_20250721174357.bat  main_20250721171956.py  main_20250721172027.py  main_20250721172132.py  main_20250721172139.py  main_20250721172431.py  main_20250721172438.py  main_20250721173820.py  main_20250721173854.py  main_20250721173927.py  main_20250721173957.py  main_20250721174027.py  main_20250721174121.py  main_20250721174137.py  main_20250721175157.py  main_20250721175243.py  main_20250721175412.py  main_20250721175530.py  main_20250721175608.py  main_20250721175631.py  main_20250721175703.py  main_20250721175729.py  main_20250721175754.py  quick_guide_20250721172547.md  quick_guide_20250721174314.md  requirements_20250721172547.txt  requirements_20250721180128.txt  run_converter_20250721172547.bat  run_converter_20250721180128.bat  setup_dev_20250722084106.py
.history/src/notebooklm_converter/: __init___20250722083715.py  app_20250722083725.py
.history/src/notebooklm_converter/resources/: create_icon_20250722084137.py
src/notebooklm_converter/: __init__.py  __main__.py  app.py  console.py  gui.py  gui_wrapper.py
tests/: test_basic.py
